--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
+    "@sanity/client": "^1.150.7",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
